Add monitors to the REST API
