# api/model_monitor_status.go
@@ -1,0 +1,107 @@
+/*
+ * upmon
+ *
+ * A cloud-native, distributed uptime monitor written in Go
+ *
+ * API version: 0.1.0
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+)
+
+// MonitorStatus struct for MonitorStatus
+type MonitorStatus struct {
+	// The current status of the monitor
+	Status string `json:"status"`
+}
+
+// NewMonitorStatus instantiates a new MonitorStatus object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewMonitorStatus(status string) *MonitorStatus {
+	this := MonitorStatus{}
+	this.Status = status
+	return &this
+}
+
+// NewMonitorStatusWithDefaults instantiates a new MonitorStatus object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewMonitorStatusWithDefaults() *MonitorStatus {
+	this := MonitorStatus{}
+	return &this
+}
+
+// GetStatus returns the Status field value
+func (o *MonitorStatus) GetStatus() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Status
+}
+
+// GetStatusOk returns a tuple with the Status field value
+// and a boolean to check if the value has been set.
+func (o *MonitorStatus) GetStatusOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Status, true
+}
+
+// SetStatus sets field value
+func (o *MonitorStatus) SetStatus(v string) {
+	o.Status = v
+}
+
+func (o MonitorStatus) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if true {
+		toSerialize["status"] = o.Status
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableMonitorStatus struct {
+	value *MonitorStatus
+	isSet bool
+}
+
+func (v NullableMonitorStatus) Get() *MonitorStatus {
+	return v.value
+}
+
+func (v *NullableMonitorStatus) Set(val *MonitorStatus) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableMonitorStatus) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableMonitorStatus) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableMonitorStatus(val *MonitorStatus) *NullableMonitorStatus {
+	return &NullableMonitorStatus{value: val, isSet: true}
+}
+
+func (v NullableMonitorStatus) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableMonitorStatus) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
