# api/model_monitors.go
@@ -1,0 +1,106 @@
+/*
+ * upmon
+ *
+ * A cloud-native, distributed uptime monitor written in Go
+ *
+ * API version: 0.1.0
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package api
+
+import (
+	"encoding/json"
+)
+
+// Monitors struct for Monitors
+type Monitors struct {
+	Monitors []Monitor `json:"monitors"`
+}
+
+// NewMonitors instantiates a new Monitors object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewMonitors(monitors []Monitor) *Monitors {
+	this := Monitors{}
+	this.Monitors = monitors
+	return &this
+}
+
+// NewMonitorsWithDefaults instantiates a new Monitors object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewMonitorsWithDefaults() *Monitors {
+	this := Monitors{}
+	return &this
+}
+
+// GetMonitors returns the Monitors field value
+func (o *Monitors) GetMonitors() []Monitor {
+	if o == nil {
+		var ret []Monitor
+		return ret
+	}
+
+	return o.Monitors
+}
+
+// GetMonitorsOk returns a tuple with the Monitors field value
+// and a boolean to check if the value has been set.
+func (o *Monitors) GetMonitorsOk() (*[]Monitor, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Monitors, true
+}
+
+// SetMonitors sets field value
+func (o *Monitors) SetMonitors(v []Monitor) {
+	o.Monitors = v
+}
+
+func (o Monitors) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if true {
+		toSerialize["monitors"] = o.Monitors
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableMonitors struct {
+	value *Monitors
+	isSet bool
+}
+
+func (v NullableMonitors) Get() *Monitors {
+	return v.value
+}
+
+func (v *NullableMonitors) Set(val *Monitors) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableMonitors) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableMonitors) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableMonitors(val *Monitors) *NullableMonitors {
+	return &NullableMonitors{value: val, isSet: true}
+}
+
+func (v NullableMonitors) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableMonitors) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
